--- a/src/main/resources/com/example/eventhub/Login.fxml
+++ b/src/main/resources/com/example/eventhub/Login.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2A363F;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.eventhub.HelloController">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2A363F;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.eventhub.LoginController">
    <children>
       <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="350.0" HBox.hgrow="ALWAYS">
          <children>
@@ -49,7 +49,7 @@
             <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="257.0" HBox.hgrow="ALWAYS">
                <children>
                   <Pane prefHeight="70.0" prefWidth="257.0" VBox.vgrow="ALWAYS" />
-                  <Text fx:id="welcometext" fill="#fbfcfc" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Back!" textAlignment="CENTER" wrappingWidth="200.13671875" VBox.vgrow="ALWAYS">
+                  <Text fx:id="welcometext" fill="#fbfcfc" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Back!" textAlignment="CENTER" wrappingWidth="200.0" VBox.vgrow="ALWAYS">
                      <font>
                         <Font name="Cambria" size="24.0" />
                      </font>
