--- a/src/main/resources/com/example/eventhub/Login.fxml
+++ b/src/main/resources/com/example/eventhub/Login.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2A363F;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.eventhub.LoginController">
+<HBox fx:id="rootPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2A363F;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.eventhub.LoginController" focusTraversable="true">
    <children>
       <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="350.0" HBox.hgrow="ALWAYS">
          <children>
@@ -22,7 +22,7 @@
                   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="235.0" HBox.hgrow="ALWAYS">
                      <children>
                         <StackPane prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
-                        <StackPane fx:id="imageContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                        <StackPane fx:id="imageContainer" focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                            <children>
                               <ImageView fx:id="logoImage" fitHeight="165.0" fitWidth="291.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -77,7 +77,7 @@
                      </font>
                   </JFXButton>
                   <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="257.0" VBox.vgrow="SOMETIMES" />
-                  <JFXButton minHeight="-Infinity" minWidth="-Infinity" prefHeight="41.0" prefWidth="257.0" text="Register?" textFill="#a5b4b4" VBox.vgrow="ALWAYS">
+                  <JFXButton minHeight="-Infinity" minWidth="-Infinity" onAction="#RegisterButton" prefHeight="41.0" prefWidth="257.0" text="Register?" textFill="#a5b4b4" VBox.vgrow="ALWAYS">
                      <font>
                         <Font size="18.0" />
                      </font>
