--- a/src/main/resources/com/example/eventhub/Register.fxml
+++ b/src/main/resources/com/example/eventhub/Register.fxml
@@ -55,25 +55,37 @@
             <VBox prefHeight="400.0" prefWidth="150.0" HBox.hgrow="SOMETIMES">
                <children>
                   <StackPane prefHeight="48.0" prefWidth="150.0" VBox.vgrow="ALWAYS" />
-                  <TextField fx:id="username" focusTraversable="false" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="190.0" style="-fx-background-color: #2A363F; -fx-border-color: #465058;" stylesheets="@Login.css" VBox.vgrow="ALWAYS">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </TextField>
+                  <VBox fx:id="usernamevbox" prefHeight="25.0" prefWidth="190.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <TextField fx:id="username" focusTraversable="false" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" prefHeight="25.0" prefWidth="190.0" style="-fx-background-color: #2A363F; -fx-border-color: #465058;" stylesheets="@Login.css" VBox.vgrow="ALWAYS">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </VBox>
                   <StackPane prefHeight="25.0" prefWidth="190.0" VBox.vgrow="ALWAYS" />
-                  <TextField fx:id="password" focusTraversable="false" prefHeight="25.0" prefWidth="190.0" style="-fx-background-color: #2A363F; -fx-border-color: #465058;" stylesheets="@Login.css" VBox.vgrow="ALWAYS">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </TextField>
+                  <VBox fx:id="passwordbox" prefHeight="25.0" prefWidth="190.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <TextField fx:id="password" focusTraversable="false" prefHeight="25.0" prefWidth="190.0" style="-fx-background-color: #2A363F; -fx-border-color: #465058;" stylesheets="@Login.css" VBox.vgrow="ALWAYS">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </VBox>
                   <StackPane prefHeight="25.0" prefWidth="190.0" VBox.vgrow="ALWAYS" />
                   <DatePicker fx:id="DOB" maxWidth="1.7976931348623157E308" prefHeight="12.0" prefWidth="150.0" stylesheets="@Login.css" VBox.vgrow="ALWAYS" />
                   <StackPane prefHeight="25.0" prefWidth="150.0" VBox.vgrow="ALWAYS" />
-                  <TextField fx:id="balance" focusTraversable="false" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #2A363F; -fx-border-color: #465058;" stylesheets="@Login.css" VBox.vgrow="ALWAYS">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </TextField>
+                  <VBox fx:id="balancevbox" prefHeight="25.0" prefWidth="190.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <TextField fx:id="balance" focusTraversable="false" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #2A363F; -fx-border-color: #465058;" stylesheets="@Login.css" VBox.vgrow="ALWAYS">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </VBox>
                   <StackPane prefHeight="25.0" prefWidth="190.0" VBox.vgrow="ALWAYS" />
                   <JFXRadioButton fx:id="malebutton" text="Male" textFill="WHITE" VBox.vgrow="ALWAYS" />
                   <StackPane prefHeight="13.0" prefWidth="150.0" VBox.vgrow="SOMETIMES" />
